[package]
name = "yp_streaming_quotes"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"    
path = "src/bin/server.rs"     

[[bin]]    
name = "client"    
path = "src/bin/client.rs"    

[dependencies]
clap = "4.6"
mpsc = "0.2"
postcard = { version = "1.1", features = ["use-std"] }
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
